# pokecpp

./: CMakeLists.txt  PokeCPP.cpp  PokeCPP.h  test.cpp
include/: PokeCPP.cpp  PokeCPP.h
pokemon/: base.h
src/pokemon/: base.h  export.h
